--- a/happy_wedding_template_v2/index.html
+++ b/happy_wedding_template_v2/index.html
@@ -7,7 +7,10 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />\
+  <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
+
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -133,75 +136,165 @@
       <h2 class="section-title">Chuyện chúng mình</h2>
       <p class="section-subtitle">Bắt đầu thật tình cờ và đầy bất ngờ...</p>
 
-      <div class="timeline">
-        <article class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <p class="timeline-date">Một ngày đẹp trời...</p>
-            <h3 class="timeline-title">Tin nhắn đầu tiên</h3>
-            <p class="timeline-text">
-              Vào một ngày rất bình thường, chú rể “lỡ” trả lời story của cô dâu. Từ vài câu chuyện vu vơ, chúng mình dần nói nhiều hơn mỗi ngày...
-            </p>
+      <div class="story-timeline-v2">
+        <!-- MỐC 1 -->
+        <article class="story-item-v2">
+          <div class="story-col-img">
+            <div class="story-photo-frame">
+              <img src="images/16.jpg" alt="Tin nhắn đầu tiên" />
+            </div>
+          </div>
+
+          <div class="story-axis">
+            <span class="story-axis-icon">◆</span>
+            <span class="story-axis-date">Một ngày đẹp trời...</span>
+          </div>
+
+          <div class="story-col-card">
+            <div class="story-card-v2">
+              <h3 class="story-card-title">Tin nhắn đầu tiên</h3>
+              <p class="story-card-text">
+                Vào một ngày rất bình thường, chú rể “lỡ” trả lời story của cô dâu.
+                Từ vài câu chuyện vu vơ, chúng mình dần nói nhiều hơn mỗi ngày...
+              </p>
+            </div>
           </div>
         </article>
 
-        <article class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <p class="timeline-date">Những ngày bên nhau</p>
-            <h3 class="timeline-title">Vui – buồn – trưởng thành</h3>
-            <p class="timeline-text">
-              Chúng mình đã đi qua với nhau rất nhiều cung bậc cảm xúc: tiếng cười, nước mắt, cả những lúc yếu lòng nhưng vẫn luôn nắm tay nhau.
-            </p>
+        <!-- CARD HỒNG TO Ở GIỮA (giống mẫu) -->
+        <div class="story-wide-card-wrap">
+          <div class="story-wide-card">
+            Tình yêu là sự cảm động, là tình cảm nồng nhiệt làm cho hai ta gắn bó
+            mật thiết và có trách nhiệm với nhau. Và chúng mình cũng vậy, chúng mình
+            đã cùng nhau đồng hành qua rất nhiều chuyện: vui, buồn, cả những lúc yếu lòng
+            nhất nhưng vẫn luôn nắm tay nhau.
+          </div>
+        </div>
+
+        <!-- MỐC 2 -->
+        <article class="story-item-v2">
+          <div class="story-col-img">
+            <div class="story-photo-frame">
+              <img src="images/35.jpg" alt="Những ngày bên nhau" />
+            </div>
+          </div>
+
+          <div class="story-axis">
+            <span class="story-axis-icon">◆</span>
+            <span class="story-axis-date">Những ngày bên nhau</span>
+          </div>
+
+          <div class="story-col-card">
+            <div class="story-card-v2">
+              <h3 class="story-card-title">Vui – buồn – trưởng thành</h3>
+              <p class="story-card-text">
+                Chúng mình đã đi qua với nhau rất nhiều cung bậc cảm xúc:
+                tiếng cười, nước mắt, cả những lúc yếu lòng nhưng vẫn luôn nắm tay nhau.
+              </p>
+            </div>
           </div>
         </article>
 
-        <article class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <p class="timeline-date">13/04/2025</p>
-            <h3 class="timeline-title">Lời cầu hôn</h3>
-            <p class="timeline-text">
-              Một lời hứa cho chặng đường dài phía trước – “mình về chung một nhà nhé?”. Và câu trả lời là “Đồng ý!”.
-            </p>
+        <!-- CARD HỒNG TO THÊM (tuỳ bạn có dùng hay không) -->
+        <div class="story-wide-card-wrap">
+          <div class="story-wide-card">
+            Và chặng đường của chúng mình tiến xa hơn đó là về chung một nhà.
+            Cảm ơn vì đã luôn ở đó, cùng nhau vượt qua mọi thứ để có ngày hôm nay
+          </div>
+        </div>
+
+        <!-- MỐC 3 -->
+        <article class="story-item-v2">
+          <div class="story-col-img">
+            <div class="story-photo-frame">
+              <img src="images/13.jpg" alt="Lời cầu hôn" />
+            </div>
+          </div>
+
+          <div class="story-axis">
+            <span class="story-axis-icon">◆</span>
+            <span class="story-axis-date">Ngày hạnh phúc</span>
+          </div>
+
+          <div class="story-col-card">
+            <div class="story-card-v2">
+              <h3 class="story-card-title">Lời cầu hôn</h3>
+              <p class="story-card-text">
+                Một lời hứa cho chặng đường dài phía trước – “mình về chung một nhà nhé?”
+                Và câu trả lời là “Em đồng ý!”
+              </p>
+            </div>
           </div>
         </article>
+        <!-- NHẪN + NGÀY CƯỚI -->
+        <div class="story-final">
+          <div class="story-final-icon">
+            <i class="bi bi-gem"></i>
+          </div>
+          <p class="story-final-date">22/11/2025</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- BIG DAY + COUNTDOWN -->
-  <section class="section" id="bigday">
-    <div class="container bigday-container">
-      <div class="bigday-text">
-        <h2 class="section-title">The Big Day!</h2>
-        <p class="section-subtitle">
-          Một lời chúc của bạn chắc chắn sẽ làm cho đám cưới của chúng mình thêm trọn vẹn.
-        </p>
-        <p class="bigday-names">Văn Huy &amp; Bích Ngọc</p>
-        <p class="bigday-date">22 tháng 11, 2025 - 16:00</p>
-      </div>
 
-      <div class="countdown">
-        <div class="count-box">
-          <span id="days">0</span>
-          <small>Ngày</small>
+  <!-- BIG DAY + COUNTDOWN (layout mới) -->
+  <section id="bigday">
+    <div class="bigday-hero">
+      <div class="bigday-inner container">
+        <div class="bigday-heading">
+          <h2 class="section-title">The Big Day!</h2>
+          <p class="section-subtitle">
+            Một lời chúc của bạn chắc chắn sẽ làm cho đám cưới của chúng mình thêm trọn vẹn.
+          </p>
         </div>
-        <div class="count-box">
-          <span id="hours">0</span>
-          <small>Giờ</small>
-        </div>
-        <div class="count-box">
-          <span id="minutes">0</span>
-          <small>Phút</small>
-        </div>
-        <div class="count-box">
-          <span id="seconds">0</span>
-          <small>Giây</small>
+
+        <div class="bigday-card">
+          <!-- Khung bên trái: Save the Date / tên / ngày giờ -->
+          <div class="bigday-left">
+            <p class="bigday-label">Save the Date</p>
+            <p class="bigday-names">Văn Huy &amp; Bích Ngọc</p>
+            <p class="bigday-date-line">22 tháng 11, 2025 &bull; 16:00</p>
+            <p class="bigday-location">Hiệp Hòa, Bắc Giang</p>
+
+            <div class="bigday-actions">
+              <button class="btn btn-outline" data-scroll="#guestbook">
+                Gửi lời chúc
+              </button>
+              <button class="btn btn-primary" data-scroll="#rsvp">
+                Xác nhận tham dự
+              </button>
+            </div>
+          </div>
+
+          <!-- Khung bên phải: countdown -->
+          <div class="bigday-right">
+            <p class="bigday-count-title">Đếm ngược tới ngày cưới</p>
+
+            <div class="countdown">
+              <div class="count-box">
+                <span id="days">0</span>
+                <small>Ngày</small>
+              </div>
+              <div class="count-box">
+                <span id="hours">0</span>
+                <small>Giờ</small>
+              </div>
+              <div class="count-box">
+                <span id="minutes">0</span>
+                <small>Phút</small>
+              </div>
+              <div class="count-box">
+                <span id="seconds">0</span>
+                <small>Giây</small>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- ALBUM -->
   <section class="section section-alt" id="album">
@@ -210,16 +303,25 @@
       <p class="section-subtitle">Một vài khoảnh khắc nhỏ trong câu chuyện lớn của chúng mình.</p>
 
       <div class="album-grid">
-        <img src="images/anh cuoi 1.jpg" alt="Ảnh cưới 1" />
-        <img src="images/anh cuoi 2.jpg" alt="Ảnh cưới 2" />
-        <img src="images/anh cuoi 3.jpg" alt="Ảnh cưới 3" />
-        <img src="images/anh cuoi 4.jpg" alt="Ảnh cưới 4" />
-        <img src="images/anh cuoi 5.jpg" alt="Ảnh cưới 5" />
-        <img src="images/anh cuoi 6.jpg" alt="Ảnh cưới 6" />
-        <img src="images/anh cuoi 7.jpg" alt="Ảnh cưới 7" />
-        <img src="images/anh cuoi 8.jpg" alt="Ảnh cưới 8" />
-        <img src="images/anh cuoi 9.jpg" alt="Ảnh cưới 9" />
-        <img src="images/anh cuoi 10.jpg" alt="Ảnh cưới 10" />
+        <img src="images/10.jpg" alt="Ảnh cưới 1" />
+        <img src="images/12.jpg" alt="Ảnh cưới 2" />
+        <img src="images/17.jpg" alt="Ảnh cưới 3" />
+        <img src="images/18.jpg" alt="Ảnh cưới 4" />
+        <img src="images/19.jpg" alt="Ảnh cưới 5" />
+        <img src="images/20.jpg" alt="Ảnh cưới 6" />
+        <img src="images/21.jpg" alt="Ảnh cưới 7" />
+        <img src="images/22.jpg" alt="Ảnh cưới 8" />
+        <img src="images/23.jpg" alt="Ảnh cưới 9" />
+        <img src="images/24.jpg" alt="Ảnh cưới 10" />
+        <img src="images/25.jpg" alt="Ảnh cưới 10" />
+        <img src="images/26.jpg" alt="Ảnh cưới 10" />
+        <img src="images/27.jpg" alt="Ảnh cưới 10" />
+        <img src="images/29.jpg" alt="Ảnh cưới 10" />
+        <img src="images/30.jpg" alt="Ảnh cưới 10" />
+        <img src="images/31.jpg" alt="Ảnh cưới 10" />
+        <img src="images/32.jpg" alt="Ảnh cưới 10" />
+        <img src="images/33.jpg" alt="Ảnh cưới 10" />
+        <img src="images/34.jpg" alt="Ảnh cưới 10" />
       </div>
     </div>
   </section>
@@ -255,7 +357,7 @@
             Xóm 2, Thôn Hương Thịnh, xã Sơn Thịnh, huyện Hiệp Hòa, tỉnh Bắc Giang
           </p>
           <div class="event-actions">
-            <a class="btn btn-small" href="https://maps.app.goo.gl/35ep6v1AMSMDGj6H6" target="_blank" rel="noopener">
+            <a class="btn btn-small" href="https://maps.app.goo.gl/aV6s26GCM5yajTEt5" target="_blank" rel="noopener">
               Xem bản đồ
             </a>
           </div>
@@ -365,7 +467,8 @@
           </div>
           <p>Ngân hàng: Vietcombank</p>
           <p>Tên: Nguyen Van Huy</p>
-          <p>STK: 1022335501</p>
+          <p>STK: 1022476947</p>
+          <p>SDT: 0364148012</p>
         </div>
 
         <div class="gift-card">
@@ -375,7 +478,8 @@
           </div>
           <p>Ngân hàng: Vietcombank</p>
           <p>Tên: Duong Thi Bich Ngoc</p>
-          <p>STK: 1038202660</p>
+          <p>STK: 1031288818</p>
+          <p>SDT: 0362630797</p>
         </div>
       </div>
       <p class="modal-thanks">Cảm ơn bạn rất nhiều vì tình cảm dành cho chúng mình! ❤️</p>
