--- a/happy_wedding_template_v2/index.html
+++ b/happy_wedding_template_v2/index.html
@@ -392,7 +392,7 @@
         <div class="guestbook-messages">
           <h3 class="guestbook-heading">Lời chúc</h3>
           <ul id="guestbook-list">
-            <li><strong>The Viet</strong><br>Tý tuổi mà giỏi - Chúc mừng hạnh phúc hai bạn, đồng hành cùng nhau trên mọi chặng đường.</li>
+            <li><strong>Bạn thân</strong><br>Chúc mừng hạnh phúc gáiiuuuu, chúc vợ chồng bạn đồng hành cùng nhau trên mọi chặng đường.</li>
             <li><strong>Thằng em</strong><br>Chúc thằng anh trăm năm hạnh phúc, sớm sinh quý tử...</li>
           </ul>
         </div>
@@ -514,7 +514,8 @@
       💌
     </button>
     <button type="button" class="fab fab-close" id="fab-hide" title="Ẩn menu">
-      ✕
+        <span class="icon-x">✕</span>
+        <span class="icon-menu">☰</span>
     </button>
   </div>
 
