--- a/happy_wedding_template_v2/index.html
+++ b/happy_wedding_template_v2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8" />
   <title>Thiệp cưới online - Văn Huy & Bích Ngọc</title>
@@ -7,13 +8,15 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500;600&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
 
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <!-- NAV -->
   <header class="navbar">
@@ -35,7 +38,7 @@
 
   <!-- HERO -->
   <section class="hero" id="hero">
-    <div class="hero-bg"></div>   <!-- lớp nền chạy mượt -->
+    <div class="hero-bg"></div> <!-- lớp nền chạy mượt -->
     <div class="hero-content container">
       <p class="hero-subtitle">SAVE THE DATE</p>
       <h1 class="hero-title">Văn Huy &amp; Bích Ngọc</h1>
@@ -348,9 +351,7 @@
               Xóm Thống Nhất, Xã Thường Thắng, Huyện Hiệp Hòa, Tỉnh Bắc Giang
             </p>
             <div class="event-actions">
-              <a class="btn btn-small"
-                href="https://maps.app.goo.gl/1mQz9G7m2KVksuQf8"
-                target="_blank" rel="noopener">
+              <a class="btn btn-small" href="https://maps.app.goo.gl/1mQz9G7m2KVksuQf8" target="_blank" rel="noopener">
                 Xem bản đồ
               </a>
             </div>
@@ -370,9 +371,7 @@
               Thôn Hương Thịnh, Xã Sơn Thịnh, Huyện Hiệp Hòa, Tỉnh Bắc Giang
             </p>
             <div class="event-actions">
-              <a class="btn btn-small"
-                href="https://maps.app.goo.gl/aV6s26GCM5yajTEt5"
-                target="_blank" rel="noopener">
+              <a class="btn btn-small" href="https://maps.app.goo.gl/aV6s26GCM5yajTEt5" target="_blank" rel="noopener">
                 Xem bản đồ
               </a>
             </div>
@@ -392,7 +391,8 @@
         <div class="guestbook-messages">
           <h3 class="guestbook-heading">Lời chúc</h3>
           <ul id="guestbook-list">
-            <li><strong>Bạn thân</strong><br>Chúc mừng hạnh phúc gáiiuuuu, chúc vợ chồng bạn đồng hành cùng nhau trên mọi chặng đường.</li>
+            <li><strong>Bạn thân</strong><br>Chúc mừng hạnh phúc gáiiuuuu, chúc vợ chồng bạn đồng hành cùng nhau trên
+              mọi chặng đường.</li>
             <li><strong>Thằng em</strong><br>Chúc thằng anh trăm năm hạnh phúc, sớm sinh quý tử...</li>
           </ul>
         </div>
@@ -405,7 +405,8 @@
           </label>
           <label>
             Lời chúc
-            <textarea name="message" rows="3" required placeholder="Viết vài lời yêu thương gửi đến cô dâu chú rể..."></textarea>
+            <textarea name="message" rows="3" required
+              placeholder="Viết vài lời yêu thương gửi đến cô dâu chú rể..."></textarea>
           </label>
           <button type="submit" class="btn btn-primary">Gửi lời chúc</button>
           <p class="form-note">* Lời chúc hiện bên cạnh*...</p>
@@ -454,15 +455,55 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-content">
       <p class="footer-names">Văn Huy &amp; Bích Ngọc</p>
       <p class="footer-text">
         Cảm ơn bạn đã dành thời gian đọc thiệp cưới và chia sẻ niềm vui với chúng mình.
       </p>
+
+      <!-- MINI HỘP MỪNG CƯỚI DƯỚI CHÂN TRANG -->
+      <div class="footer-gift-mini">
+        <h3 class="footer-gift-mini-title">Hộp mừng cưới</h3>
+        <p class="footer-gift-mini-intro">
+          Nếu tiện, bạn có thể mừng cưới cho chúng mình qua chuyển khoản. Xin cảm ơn bạn rất nhiều ạ!
+        </p>
+
+        <div class="footer-gift-mini-grid">
+          <!-- Chú rể -->
+          <div class="footer-gift-mini-item">
+            <p class="footer-gift-mini-label">Mừng cưới đến chú rể</p>
+            <p class="footer-gift-mini-name">Ngyen Van Huy</p>
+            <p class="footer-gift-mini-bank">Ngân hàng: Vietcombank</p>
+            <p class="footer-gift-mini-account">
+              STK: <strong>1022476947</strong>
+            </p>
+            <p class="footer-gift-mini-account">
+              SDT: <strong>0364148012</strong>
+            </p>
+          </div>
+
+          <!-- Cô dâu -->
+          <div class="footer-gift-mini-item">
+            <p class="footer-gift-mini-label">Mừng cưới đến cô dâu</p>
+            <p class="footer-gift-mini-name">Duong Thi Bich Ngoc</p>
+            <p class="footer-gift-mini-bank">Ngân hàng: Vietcombank</p>
+            <p class="footer-gift-mini-account">
+              STK: <strong>1031288818</strong>
+            </p>
+            <p class="footer-gift-mini-account">
+              SDT: <strong>0362630797</strong>
+            </p>
+          </div>
+        </div>
+
+        <p class="footer-gift-mini-note">
+          (Chi tiết QR & thông tin đầy đủ đã có ở mục <strong>“Hộp mừng cưới”</strong> phía trên trang.)
+        </p>
+      </div>
     </div>
   </footer>
+
 
   <!-- GIFT MODAL -->
   <div class="modal" id="gift-modal" aria-hidden="true">
@@ -514,43 +555,26 @@
       💌
     </button>
     <button type="button" class="fab fab-close" id="fab-hide" title="Ẩn menu">
-        <span class="icon-x">✕</span>
-        <span class="icon-menu">☰</span>
+      <span class="icon-x">✕</span>
+      <span class="icon-menu">☰</span>
     </button>
   </div>
 
   <script src="script.js"></script>
 
-    <!-- MUSIC PLAYER -->
-  <audio
-    id="bg-music"
-    src="music\i-do.mp3"
-    preload="auto"
-    loop
-  ></audio>
+  <!-- MUSIC PLAYER -->
+  <audio id="bg-music" src="music\i-do.mp3" preload="auto" loop></audio>
 
-  <button
-    id="music-toggle"
-    class="music-toggle is-muted"
-    type="button"
-    aria-label="Bật nhạc"
-  >
+  <button id="music-toggle" class="music-toggle is-muted" type="button" aria-label="Bật nhạc">
     <!-- icon loa + nốt nhạc -->
     <svg viewBox="0 0 24 24" aria-hidden="true">
       <!-- loa -->
-      <path
-        d="M5 9v6h3.5L13 18.5v-13L8.5 9H5z"
-        class="speaker"
-      />
+      <path d="M5 9v6h3.5L13 18.5v-13L8.5 9H5z" class="speaker" />
       <!-- sóng âm -->
-      <path
-        d="M16 9.5a3 3 0 010 5m1.8-6.8a5 5 0 010 8.6"
-        class="wave"
-        fill="none"
-        stroke-linecap="round"
-        stroke-width="1.6"
-      />
+      <path d="M16 9.5a3 3 0 010 5m1.8-6.8a5 5 0 010 8.6" class="wave" fill="none" stroke-linecap="round"
+        stroke-width="1.6" />
     </svg>
   </button>
 </body>
+
 </html>
