--- a/happy_wedding_template_v2/index.html
+++ b/happy_wedding_template_v2/index.html
@@ -16,6 +16,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
 
 
+  <!-- ========== SOCIAL PREVIEW ========== -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="vi_VN">
+  <meta property="og:url" content="https://happyweddingvhbn.netlify.app/">
+  <meta property="og:site_name" content="Thiệp cưới Văn Huy & Bích Ngọc">
+  <meta property="og:title" content="Đám Cưới Văn Huy & Bích Ngọc 💍">
+  <meta property="og:description"
+    content="Chúng mình cưới! 22/11/2025 • Hiệp Hòa, Bắc Giang 💌 Mời bạn ghé xem thiệp cưới và gửi lời chúc nhé!">
+  <meta property="og:image" content="https://happyweddingvhbn.netlify.app/images/16.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Đám Cưới Văn Huy & Bích Ngọc 💍">
+  <meta name="twitter:description"
+    content="Chúng mình cưới! 22/11/2025 • Hiệp Hòa, Bắc Giang 💌 Mời bạn ghé xem thiệp cưới và gửi lời chúc nhé!">
+  <meta name="twitter:image" content="https://happyweddingvhbn.netlify.app/images/16.jpg">
+
+
   <link rel="stylesheet" href="style.css" />
 </head>
 
